scholar base stripped down considerably. All themes now use sidebar-first divs

--- a/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
@@ -35,13 +35,13 @@ body {
   }
 
 a, a:visited {
-    color:#990000;
-    text-decoration: none;
-    }
+  color:#990000;
+  text-decoration: none;
+  }
 
 a:hover {
-    color:#3399CC;
-    }
+  color:#3399CC;
+  }
 
 #header h1 {
   font-weight:normal;
@@ -55,7 +55,7 @@ a:hover {
   color: #313030;
   }
 
-h2, h3, #sidebar-left a, #header {
+h2, h3, #sidebar-first a, #header {
   font-weight: bold;
   }
 
@@ -69,12 +69,9 @@ h3 {
   font-size: 1.4em;
   }
 
-
 div.form-item {
   border: none;
   }
-
-
 
 /*HEADER */
 
@@ -101,11 +98,9 @@ div.form-item {
   text-shadow: rgba(51,51,51, .4) 0px 1px 1px;
   }
 
-
 ul#top-front li#get-form a:hover {
   color: #f0ff00;
   }
-
 
 #block-openscholar_front-site_mission h2.title {
   float:right;
@@ -125,7 +120,6 @@ ul#top-front li#get-form a:hover {
 p.copy {
   margin-top: 0;
   }
-
 
 /* Different Tables for admin use */
 
@@ -199,7 +193,9 @@ td, td.description {
   width:218px;
   }
 
-.block-search .form-item, .block-search .form-submit, .block-search .clear-block {
+.block-search .form-item,
+.block-search .form-submit,
+.block-search .clear-block {
   border:medium none;
   margin:0;
   padding:0;
@@ -318,6 +314,7 @@ a.imagecache-openscholar_front_logo {
   display:block;
   }
 
-#block-views-openscholar_sites-block_2 img, .view-iqss-project-sites img {
+#block-views-openscholar_sites-block_2 img,
+.view-iqss-project-sites img {
   border: 1px solid #535252;
   }
