--- a/sites/all/themes/openscholar/scholar_aglet/flavors/bronze/bronze.css
+++ b/sites/all/themes/openscholar/scholar_aglet/flavors/bronze/bronze.css
@@ -6,19 +6,19 @@
   background: #dab03f;
   }
 
-#sidebar-left {
+#sidebar-first {
   background:#f0dc8e;
   }
 
-#sidebar-right {
+#sidebar-second {
   background:#f0c78c;
   }
 
-#sidebar-left h3 {
+#sidebar-first h3 {
   background: #f0ec81;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   background: #ffd495;
   }
 
