--- a/sites/all/themes/openscholar/scholar_aglet/flavors/copper/copper.css
+++ b/sites/all/themes/openscholar/scholar_aglet/flavors/copper/copper.css
@@ -6,19 +6,19 @@
   background: #8a2608;
   }
 
-#sidebar-left {
+#sidebar-first {
   background:#e9e7be;
   }
 
-#sidebar-right {
+#sidebar-second {
   background:#eecbb4;
   }
 
-#sidebar-left h3 {
+#sidebar-first h3 {
   background: #f0ec98;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   background: #e8af8a;
   }
 
