--- a/sites/all/themes/openscholar/scholar_aglet/flavors/gold/gold.css
+++ b/sites/all/themes/openscholar/scholar_aglet/flavors/gold/gold.css
@@ -6,19 +6,19 @@
   background: #f8ef61;
   }
 
-#sidebar-left {
+#sidebar-first {
   background:#fffcc4;
   }
 
-#sidebar-right {
+#sidebar-second {
   background:#f6d861;
   }
 
-#sidebar-left h3 {
+#sidebar-first h3 {
   background: #edf09a;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   background: #efe87c;
   }
 
