--- a/sites/all/themes/openscholar/scholar_aglet/flavors/iron/iron.css
+++ b/sites/all/themes/openscholar/scholar_aglet/flavors/iron/iron.css
@@ -6,19 +6,19 @@
   background: #8a5a57;
   }
 
-#sidebar-left {
+#sidebar-first {
   background:#ededed;
   }
 
-#sidebar-right {
+#sidebar-second {
   background:#cecece;
   }
 
-#sidebar-left h3 {
+#sidebar-first h3 {
   background: #dfdfdf;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   background: #bebebe;
   }
 
