--- a/sites/all/themes/openscholar/scholar_airstream/flavors/green/green.css
+++ b/sites/all/themes/openscholar/scholar_airstream/flavors/green/green.css
@@ -23,17 +23,17 @@ a:hover {
 
 /*Navbar & sidebar shared */
 
-#navbar a, #navbar a:visited, #sidebar-left a, #sidebar-left a:visited {
+#navbar a, #navbar a:visited, #sidebar-first a, #sidebar-first a:visited {
   color: #282828;
   }
 
-#navbar a:hover, #sidebar-left a:hover, #navbar a.active, #sidebar-left a.active, #navbar li.active-trail, #sidebar-left li.active-trail {
+#navbar a:hover, #sidebar-first a:hover, #navbar a.active, #sidebar-first a.active, #navbar li.active-trail, #sidebar-first li.active-trail {
   background:#e4eddb;
   }
 
 
 /*Navbar Specific */
 
-#sidebar-left li a, #navbar li, #navbar li.first {
+#sidebar-first li a, #navbar li, #navbar li.first {
   border-color: #b0c0a0;
   }
