--- a/sites/all/themes/openscholar/scholar_airstream/scholar-airstream.css
+++ b/sites/all/themes/openscholar/scholar_airstream/scholar-airstream.css
@@ -34,12 +34,12 @@ a:hover {
     }
 
 
-h1, h2, h3, #sidebar-left a, #header {
+h1, h2, h3, #sidebar-first a, #header {
     font-family: georgia, serif;
     font-weight: normal;
     }
 
-h1 a, h2 a, h3 a, #sidebar-left a {
+h1 a, h2 a, h3 a, #sidebar-first a {
     font-style: normal;
     }
 
@@ -60,14 +60,14 @@ body.navbar-on #wrapper {
   background: url(images/body-bg-horiz.png) repeat-x 0 160px #fff;
   }
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
     width: 180px;
     padding: 0;
     right: 200px;
     }
 
 
-body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
   padding-right: 20px;
   }
 
@@ -75,7 +75,7 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     padding-left: 180px;
     }
 
-#sidebar-right {
+#sidebar-second {
     border-left: 1px solid #D8D6D6;
     }
 
@@ -83,7 +83,7 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     text-align: center;
     }
 
-body.sidebar-left #footer, body.two-sidebars #footer {
+body.sidebar-first #footer, body.two-sidebars #footer {
   margin-left: 209px;
   text-align: left;
   }
@@ -135,7 +135,7 @@ body.navbar #header p {
 
 /*Navbar & sidebar shared */
 
-#navbar a, #navbar a:visited, #sidebar-left a, #sidebar-left a:visited {
+#navbar a, #navbar a:visited, #sidebar-first a, #sidebar-first a:visited {
   font-style: normal;
   display:block;
   color: #5088BA;
@@ -144,7 +144,7 @@ body.navbar #header p {
   }
 
 
-#navbar a:hover, #sidebar-left a:hover, #navbar a.active, #sidebar-left a.active, #navbar li.active-trail, #sidebar-left li.active-trail {
+#navbar a:hover, #sidebar-first a:hover, #navbar a.active, #sidebar-first a.active, #navbar li.active-trail, #sidebar-first li.active-trail {
   background:#F9FAFA;
   }
 
@@ -168,11 +168,11 @@ body.navbar #header p {
   height: 34px;
   }
 
-body.sidebar-left #content-wrapper, body.two-sidebars #content-wrapper {
+body.sidebar-first #content-wrapper, body.two-sidebars #content-wrapper {
   clear: none;
   }
 
-body.navbar #sidebar-left {
+body.navbar #sidebar-first {
   clear: right;
   }
 
@@ -185,22 +185,22 @@ body.navbar #sidebar-left {
 
 /* side bar specific */
 
-#sidebar-left li {
+#sidebar-first li {
   list-style: none;
   margin: 0 1px;
   }
 
-#sidebar-left a, #sidebar-left a:visited {
+#sidebar-first a, #sidebar-first a:visited {
     line-height:17px;
     padding:14px 9px;
     }
 
-#sidebar-left li a {
+#sidebar-first li a {
     border-bottom:1px solid #D8D6D6;
     }
 
 
-#sidebar-left h2, #sidebar-left h3, #sidebar-left p {
+#sidebar-first h2, #sidebar-first h3, #sidebar-first p {
     margin-left: 9px;
     margin-right: 9px;
     }
@@ -208,11 +208,11 @@ body.navbar #sidebar-left {
 
 /* MAIN CONTENT AREA */
 
-body.sidebar-left #content, body.header-left-main #header-main .content {
+body.sidebar-first #content, body.header-left-main #header-main .content {
     margin-left: 20px;
     }
 
-body.sidebar-right #content, body.header-main-right #header-main .content {
+body.sidebar-second #content, body.header-main-right #header-main .content {
     margin-right: 20px;
     }
 
