--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -2,7 +2,8 @@
 
 
 input.form-text,
-textarea.form-textarea {
+textarea.form-textarea,
+div.description {
   width: 100%;
   max-width: 771px;
   }
@@ -108,6 +109,8 @@ select option {
   line-height:normal;
   max-width: 278px;
   padding-right:22px;
+  border-left: 1px solid #b7c2ce;
+  padding-left: 1px;
   }
 
 .search-form .container-inline .form-item {
@@ -121,12 +124,10 @@ select option {
   padding: 0;
   }
 
-
 .search-form .container-inline .form-item .form-text {
   height: 14px;
   padding: 3px 4px 0 0 !important;
   border: none;
-  border-left: 1px solid #b7c2ce;
   background: transparent;
   width:100%;
   }
