--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -51,7 +51,7 @@ a, a:visited {
 p.copy {
   color: #76797C;
   font-size: 11px;
-  font-family: arial, sans-serif;
+  font-family: 'helvetica neue', helvetica, arial, sans-serif;
   line-height: 29px;
   margin: 4px auto 0 auto;
   clear:both;
@@ -103,6 +103,7 @@ ul.vsite-taxonomy-terms li:hover a,
 a.ctools-dropdown-link:hover,
 a.context-button:hover {
   color: #228822 !important;
+  background-color: transparent !important;
   }
 
 .form-required {
@@ -118,7 +119,7 @@ p.copy a.poweredby  {
   text-indent:-999em;
   display:block;
   width:145px;
-  height:26px;
+  height:23px;
   }
 
 p.copy a.poweredby:hover {
@@ -311,7 +312,7 @@ legend {
 /* TOP OPENSCHOLAR MENUS */
 
 #top a, #top a:visited, #top ul.links li a, #top ul.links li a:visited {
-  font-family: arial, sans-serif !important;
+  font-family: 'helvetica neue', helvetica, arial, sans-serif !important;
   }
 
 
@@ -359,7 +360,7 @@ ul.admin {
   background: #fff;
   line-height: 12px !important;
   font-size: 10px !important;
-  font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+  font-family: 'helvetica neue', helvetica, arial, sans-serif !important;
   margin: 0 !important;
   padding: 0 1px 0 0 !important;
   }
@@ -406,18 +407,18 @@ a.delete {
 
 /* BUTTONS */
 
-input.form-submit, button {
+input.form-submit, input.form-button, button {
   background: #e8e8e8;
   color: #000;
   border: 1px solid #c4c4c4;
-  padding: 1px 5px !important;
+  padding: 4px 12px !important;
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
-  margin: 5px 5px 5px 0;
+  margin: 5px 5px 15px 0;
   cursor: pointer;
   text-align: center;
   white-space: nowrap;
-  font-size: 10px;
+  font-size: 12px;
   }
 
 input.form-submit:active, button:active {
