--- a/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
+++ b/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
@@ -39,7 +39,7 @@ a:hover {
   margin-top: 10px;
   }
 
-#sidebar-left h3, #sidebar-right h3, #sidebar-right div.litecal .litecal-title h3.litecal-title, #sidebar-left div.litecal .litecal-title h3.litecal-title {
+#sidebar-first h3, #sidebar-second h3, #sidebar-second div.litecal .litecal-title h3.litecal-title, #sidebar-first div.litecal .litecal-title h3.litecal-title {
   font-size: 14px;
   line-height: 17px;
   text-transform: uppercase;
@@ -124,7 +124,7 @@ a:hover {
   border: 1px solid #5e5c58;
   }
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   right: auto;
   margin-left: 0;
   margin-right: 0;
