--- a/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy-ie.css
+++ b/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy-ie.css
@@ -10,11 +10,11 @@ body.header-left-main #header-left {
   height: 1%;
   }
 
-body.two-sidebars #sidebar-left, body.sidebar-left #sidebar-left, body.two-sidebars #sidebar-right, body.sidebar-right #sidebar-right {
+body.two-sidebars #sidebar-first, body.sidebar-first #sidebar-first, body.two-sidebars #sidebar-second, body.sidebar-second #sidebar-second {
   right: 0;
   left: 0;
   }
 
-#content-wrapper, #sidebar-left h3, #sidebar-right h3 {
+#content-wrapper, #sidebar-first h3, #sidebar-second h3 {
   _zoom:1;
   }
