--- a/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy.css
+++ b/sites/all/themes/openscholar/scholar_bunchy/scholar-bunchy.css
@@ -45,7 +45,7 @@ body {
   margin-top: 10px;
   }
 
-#sidebar-left h3, #sidebar-right h3, #sidebar-right div.litecal .litecal-title h3.litecal-title, #sidebar-left div.litecal .litecal-title h3.litecal-title {
+#sidebar-first h3, #sidebar-second h3, #sidebar-second div.litecal .litecal-title h3.litecal-title, #sidebar-first div.litecal .litecal-title h3.litecal-title {
   background: #353a3c;
   color:#fff;
   padding: 4px 5px;
@@ -83,7 +83,7 @@ body {
   height:117px;
   }
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   width: 157px;
   border-left: 1px solid #919191;
   padding: 0 6px 0 9px;
