--- a/sites/all/themes/openscholar/scholar_burroughs/scholar-burroughs.css
+++ b/sites/all/themes/openscholar/scholar_burroughs/scholar-burroughs.css
@@ -20,11 +20,11 @@ body.cp-toolbar-full {
   padding-top: 1px;
   }
 
-body.sidebar-left #container {
+body.sidebar-first #container {
   background-image: url(images/top-leftsidebar.jpg);
   }
 
-body.sidebar-right #container {
+body.sidebar-second #container {
   background-image: url(images/top-rightsidebar.jpg);
   }
 
@@ -43,7 +43,7 @@ a:hover {
     }
 
 
-#header, #sidebar-right #sidebar-left {
+#header, #sidebar-second #sidebar-first {
     font-weight: bold;
     }
 
@@ -67,31 +67,31 @@ h2.title {
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   font-size: 11px;
   line-height: 1.3em;
   font-variant: small-caps;
   }
 
-#sidebar-left {
+#sidebar-first {
   padding-top: 30px;
   width: 95px;
   right: 135px;
   text-align: right;
   }
 
-#sidebar-left ul.menu {
+#sidebar-first ul.menu {
   text-align: right;
   }
 
-#sidebar-right {
+#sidebar-second {
   width: 100px;
   padding-right:35px;
   padding-left: 5px;
   margin-right: -160px;
   }
 
-#content-wrapper, body.sidebar-left #content-wrapper,  body.sidebar-right #content-wrapper {
+#content-wrapper, body.sidebar-first #content-wrapper,  body.sidebar-second #content-wrapper {
     padding-left: 115px !important;
     padding-right: 160px !important;
     }
