--- a/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
+++ b/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
@@ -8,11 +8,11 @@ body {
     font-family: palatino, baskerville, "palatino linotype", "Times New Roman", Times, Georgia, serif;
     }
 
-body.sidebar-left {
+body.sidebar-first {
     background-image: url(images/body-bg-left-sidebar.jpg);
     }
 
-body.sidebar-right {
+body.sidebar-second {
     background-image: url(images/body-bg-right-sidebar.jpg);
     }
 
@@ -20,11 +20,11 @@ body.two-sidebars {
     background-image: url(images/body-bg-both-sidebar.jpg);
     }
 
-body.sidebar-left #header {
+body.sidebar-first #header {
     background-image:url(images/header-left-sidebar.jpg);
     }
 
-body.sidebar-right #header {
+body.sidebar-second #header {
     background-image:url(images/header-right-sidebar.jpg);
     }
 
@@ -67,7 +67,7 @@ a:hover, a.active, .active-trail a {
   }
 
 
-h2, h3, #sidebar-right a, #sidebar-left a, .title a, .title a:visited {
+h2, h3, #sidebar-second a, #sidebar-first a, .title a, .title a:visited {
     font-weight: bold;
     text-decoration: none !important;
     }
@@ -110,11 +110,11 @@ h2.title {
     }
 
 
-#sidebar-left {
+#sidebar-first {
   text-align:right;
   }
 
-#sidebar-left ul.menu {
+#sidebar-first ul.menu {
   text-transform: uppercase;
   text-align:right;
   }
@@ -126,7 +126,7 @@ h2.title {
   padding: 10px 32px;
   }
 
-body.sidebar-left #header-main,
+body.sidebar-first #header-main,
 body.two-sidebars #header-main {
   padding-left: 0;
   }
@@ -135,31 +135,31 @@ body.two-sidebars #header-main {
   padding: 0 40px;
   }
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
   width: 156px;
   right: 259px;
   padding-right: 15px;
   padding-left: 24px;
   }
 
-body.sidebar-left #header-left,
+body.sidebar-first #header-left,
 body.two-sidebars #header-left {
   right:205px;
   }
 
-#sidebar-left {
+#sidebar-first {
   top: -100px;
   right: 275px;
   }
 
-#sidebar-right, #header-right {
+#sidebar-second, #header-right {
   width: 156px;
   padding-left: 15px;
   padding-right: 24px;
   margin-right: -259px;
   }
 
-#sidebar-right {
+#sidebar-second {
   margin-right: -275px;
   }
 
@@ -172,7 +172,7 @@ body.two-sidebars #header-left {
   padding-right: 259px;
   }
 
-body.sidebar-left #header-wrapper,
+body.sidebar-first #header-wrapper,
 body.two-sidebars #header-wrapper {
   padding-right: 205px;
   }
@@ -185,16 +185,16 @@ body.two-sidebars #header-wrapper {
 
 /*CONTENT AREA */
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   font-size: 13px;
   line-height: 112%;
   }
 
-#sidebar-left li, #sidebar-right li {
+#sidebar-first li, #sidebar-second li {
   margin-bottom: .7em;
   }
 
-body.sidebar-left #content-wrapper {
+body.sidebar-first #content-wrapper {
   padding-right: 70px;
   }
 
@@ -206,7 +206,7 @@ body.navbar #content-main {
   margin-top: 30px;
   }
 
-#content-main, #sidebar-right, #sidebar-left {
+#content-main, #sidebar-second, #sidebar-first {
   padding-top: 0;
   }
 
@@ -231,11 +231,11 @@ body.navbar #content-main {
     text-align: center;
     }
 
-body.sidebar-left, body.no-sidebars #header #header-right {
+body.sidebar-first, body.no-sidebars #header #header-right {
     padding-top: 0;
     }
 
-body.sidebar-left #header, body.two-sidebars #header {
+body.sidebar-first #header, body.two-sidebars #header {
   padding-left: 195px;
   }
 
@@ -245,7 +245,7 @@ body.header-main #block-scholar-1, body.header-main-right #block-scholar-1 {
   min-height: 112px;
   }
 
-body.sidebar-right #header-wrapper {
+body.sidebar-second #header-wrapper {
   margin: 0;
   }
 
@@ -273,11 +273,11 @@ body.sidebar-right #header-wrapper {
   color: #993300;
   }
 
-body.sidebar-right #navbar {
+body.sidebar-second #navbar {
   width: 685px;
   }
 
-body.sidebar-left #navbar, body.two-sidebars #navbar {
+body.sidebar-first #navbar, body.two-sidebars #navbar {
   padding-left: 206px;
   width: 714px;
   }
@@ -297,11 +297,11 @@ body.two-sidebars #navbar {
   padding: 30px;
   }
 
-body.sidebar-left #footer, body.two-sidebars #footer {
+body.sidebar-first #footer, body.two-sidebars #footer {
   margin-left:184px;
   }
 
-body.sidebar-right #footer, body.two-sidebars #footer {
+body.sidebar-second #footer, body.two-sidebars #footer {
   margin-right:209px;
   }
 
