--- a/sites/all/themes/openscholar/scholar_density/scholar-density-ie.css
+++ b/sites/all/themes/openscholar/scholar_density/scholar-density-ie.css
@@ -1,4 +1,4 @@
-#header, #sidebar-right, #footer {
+#header, #sidebar-second, #footer {
 
   background:#03263f;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
@@ -6,7 +6,7 @@
   zoom: 1;
   }
 
-#sidebar-left {
+#sidebar-first {
   background: #d2dab8;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
