--- a/sites/all/themes/openscholar/scholar_density/scholar-density.css
+++ b/sites/all/themes/openscholar/scholar_density/scholar-density.css
@@ -32,7 +32,7 @@ body {
   color:#fff;
   }
 
-#header h1 a:hover, #sidebar-right h2, #sidebar-right h3 {
+#header h1 a:hover, #sidebar-second h2, #sidebar-second h3 {
   color: #dde3c9;
   text-decoration: none;
   }
@@ -79,7 +79,7 @@ body.admin-menu #wrapper {
   left: auto;
   }
 
-#header, #sidebar-right, #footer {
+#header, #sidebar-second, #footer {
   background: rgba(3, 38, 63, 0.76);
   }
 
@@ -96,14 +96,14 @@ body.admin-menu #wrapper {
   float: left;
   }
 
-#sidebar-left {
+#sidebar-first {
   width: 164px;
   background: rgba(210, 218, 184, 0.76);
   right: 224px;
   padding: 0;
   }
 
-#sidebar-right {
+#sidebar-second {
   width: 150px;
   }
 
@@ -172,7 +172,7 @@ p.copy a.poweredby {
 
 /* SIDEBAR LEFT */
 
-#sidebar-left .block {
+#sidebar-first .block {
   padding: 0 16px 16px 16px;
   }
 
@@ -199,7 +199,7 @@ p.copy a.poweredby {
   padding-left: 16px;
   }
 
-#sidebar-left #block-vsite_menus-0 {
+#sidebar-first #block-vsite_menus-0 {
   padding-left:0;
   padding-right: 0;
   }
@@ -233,23 +233,23 @@ p.copy a.poweredby {
   }
 
 /* SIDEBAR RIGHT*/
-#sidebar-right {
+#sidebar-second {
   color: #c2bfa7;
   padding-top: 30px;
   }
 
-#sidebar-right a, #sidebar-right a:visited {
+#sidebar-second a, #sidebar-second a:visited {
   color: #e9e9e9;
   }
 
-#sidebar-right li {
+#sidebar-second li {
   list-style: none;
   padding-left: 20px;
   background: url(images/bullet.png) no-repeat 0 50% transparent;
   margin-left: 0;
   }
 
-#header, #sidebar-left, #sidebar-right {
+#header, #sidebar-first, #sidebar-second {
   padding-bottom: 1001em;
 	margin-bottom: -1000em;
 	}
@@ -260,7 +260,7 @@ p.copy a.poweredby {
   padding: 30px 1000em 30px 194px;
   }
 
-.no-sidebars .node-teaser, .sidebar-right .node-teaser {
+.no-sidebars .node-teaser, .sidebar-second .node-teaser {
   margin-left: -30px;
   padding-left: 30px;
   }
