--- a/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
@@ -36,7 +36,7 @@ h2 {
     font-size: 1.7em;
     }
 
-h1 a, h2 a, h3 a, #sidebar-right a {
+h1 a, h2 a, h3 a, #sidebar-second a {
     font-style: normal;
     }
 
@@ -60,17 +60,17 @@ img {
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left, #header-left, #sidebar-right, #header-right {
+#sidebar-first, #header-left, #sidebar-second, #header-right {
   width: 180px;
   line-height: 130%;
   }
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
   right: 246px;
   padding-left: 36px;
   }
 
-#sidebar-left {
+#sidebar-first {
   width: 149px;
   right: 216px;
   border-right: 1px solid #ccc;
@@ -80,7 +80,7 @@ body.header-left-main #header-wrapper {
   padding-right: 0;
   }
 
-#sidebar-right, #header-right {
+#sidebar-second, #header-right {
   padding-right: 36px;
   margin-right: -246px;
   }
@@ -104,11 +104,11 @@ body.header-left-main #header-wrapper {
   height: 145px;
   }
 
-body.sidebar-right #content-wrapper {
+body.sidebar-second #content-wrapper {
   padding-left: 60px;
   }
 
-body.sidebar-left #content-wrapper {
+body.sidebar-first #content-wrapper {
   padding-right: 50px;
   }
 
@@ -168,7 +168,7 @@ body.no-sidebars #content-wrapper {
     font-size: 1.1em;
     }
 
-#sidebar-left #block-vsite_menus-0 li {
+#sidebar-first #block-vsite_menus-0 li {
   margin:0;
   }
 
@@ -183,11 +183,11 @@ body.no-sidebars #content-wrapper {
 
 /* MAIN CONTENT AREA */
 
-body.sidebar-left #content {
+body.sidebar-first #content {
     margin-left: 30px;
     }
 
-body.sidebar-right #content {
+body.sidebar-second #content {
     margin-right: 30px;
     }
 
