--- a/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
+++ b/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
@@ -40,11 +40,11 @@ h2.title {
   font-size: .8em;
   }
 
-#sidebar-right {
+#sidebar-second {
   color: #999;
   }
 
-#sidebar-right h3.title, #sidebar-left h3.title, #sidebar-left #block-vsite_menus-0 li a {
+#sidebar-second h3.title, #sidebar-first h3.title, #sidebar-first #block-vsite_menus-0 li a {
   color: #50cae9;
   font: 13px/normal "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
   font-weight: normal;
@@ -53,7 +53,7 @@ h2.title {
   border-bottom:1px solid #c6c7c2;
   }
 
-#sidebar-right li a, #sidebar-left li a {
+#sidebar-second li a, #sidebar-first li a {
   color: #aaa;
   font-weight:normal;
   }
@@ -73,14 +73,14 @@ p.copy {
   }
 
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   font-size: .8em;
   line-height: 1.1em;
   width: 186px;
   padding:30px 22px;
   }
 
-#sidebar-left {
+#sidebar-first {
   right: 250px;
   }
 
@@ -94,11 +94,11 @@ p.copy {
   padding-bottom: 14px;
    }
 
-body.sidebar-left #container {
+body.sidebar-first #container {
   background-position: -708px 0;
   }
 
-body.sidebar-right #container {
+body.sidebar-second #container {
   background-position: 708px 0;
   }
 
@@ -112,12 +112,12 @@ p.copy a.poweredby {
 
 /* SIDEBAR ELEMENTS */
 
-#sidebar-right, #sidebar-left {
+#sidebar-second, #sidebar-first {
   font-size: 13px;
   line-height: 1.2em;
   }
 
-#sidebar-right a, #sidebar-right a:visited, #sidebar-left a, #sidebar-left a:visited {
+#sidebar-second a, #sidebar-second a:visited, #sidebar-first a, #sidebar-first a:visited {
   color: #e3dfdf;
   }
 
@@ -211,7 +211,7 @@ body.header-main #header-main, body.header-main-right #header-main {
   text-decoration:none;
   }
 
-#sidebar-left #block-vsite_menus-0 li a, #sidebar-left #block-vsite_menus-0 li a:visited {
+#sidebar-first #block-vsite_menus-0 li a, #sidebar-first #block-vsite_menus-0 li a:visited {
   color: #7e9f06;
   border: none;
   display:block;
@@ -219,7 +219,7 @@ body.header-main #header-main, body.header-main-right #header-main {
   padding-top: 2px;
   }
 
-#sidebar-left #block-vsite_menus-0 li a:hover {
+#sidebar-first #block-vsite_menus-0 li a:hover {
   text-decoration:none;
   background: #485616;
   color:#fff;
