--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
@@ -1,23 +1,27 @@
 body {
-    background: #ccc;
-    color:#666;
-    }
+  background: #E5E5E4;
+  color:#333;
+  }
 
 #container {
-    width: 980px;
-    margin: 0 auto;
-    }
+  max-width: 1260px;
+  min-width: 780px;
+  padding-right: 15px;
+  }
 
 a, a:visited {
-    color:#adad84;
-    text-decoration: none;
-    padding: 2px;
-    }
+  text-decoration: none;
+  padding: 2px;
+  }
 
-a:hover, a.active, .active-trail a {
-    color:#fff;
-    background:#adad84;
-    }
+a:hover {
+  color:#000;
+  background:#ebea8d;
+  }
+
+a.active, .active-trail a {
+  background:#666;
+  }
 
 #logo a:hover {
   background: transparent;
@@ -25,60 +29,66 @@ a:hover, a.active, .active-trail a {
 
 
 h1, h2, h3, #sidebar-right a, #navbar, #header {
-    font-weight: bold;
-    }
-
+  font-weight: bold;
+  }
 
 h1 a, h2 a, h3 a, #sidebar-right a {
-    font-style: normal;
-    }
+  font-style: normal;
+  }
 
 h2, h3, h4 {
   margin-bottom: 0;
   margin-top: 1em;
   }
 
-
 h2, h2.title {
-  color:#51787C;
   margin-bottom: 0;
   }
 
 h2.title {
   margin-bottom: .4em;
-  margin-top: 0;
   }
 
 /* LAYOUT */
+
+#content-wrapper .column {
+  padding:0;
+  }
 
 #sidebar-left, #header-left, #sidebar-right, #header-right {
   width: 180px;
   }
 
-#content-main {
+#content-main, #content {
     padding: 0;
     padding-top: 1px;
     }
 
-#sidebar-left, #header-left {
-  right: 190px;
-  padding-left: 0;
+#content-wrapper .column {
+  padding:0;
+  }
+
+#sidebar-left {
+  right: 180px;
+  margin-top: 10px;
   }
 
 #header-left {
   right: 210px;
+  padding-left: 0;
   }
 
 .header-main #header, .header-main-right #header {
   margin-left: 189px;
   }
 
-#sidebar-right, #header-right {
-  padding-right: 0;
-  margin-right: -190px
+#sidebar-right {
+  margin-right: -180px
+  margin-top: 10px;
   }
 
 #header-right {
+  padding-right: 0;
   margin-right: -210px;
   }
 
@@ -86,17 +96,22 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
   padding-right: 0;
   }
 
-#content-wrapper, #header-wrapper {
-  padding-left: 190px;
-  padding-right: 190px;
-  }
-
 #header-wrapper {
+  padding-left: 190px;
   padding-right: 210px;
   }
 
 #content-wrapper {
+  padding-left: 180px;
+  padding-right: 180px;
   padding-top: 20px;
+  }
+
+#content {
+  background: #fff;
+  box-shadow: 0 3px 2em #999;
+  -moz-box-shadow: 0 3px 2em #999;
+  -webkit-box-shadow: 0 3px 2em #999;
   }
 
 /* HEADER ELEMENTS */
@@ -108,23 +123,25 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     }
 
 #header h1 {
-    font-size: 37px;
-    line-height: 1em;
+    font-size: 2em;
     }
 
-#header h1, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited, #header {
-    color:#fff;
-    }
+#header h3,
+#header a,
+#header a:visited,
+#header {
+  color:#888;
+  }
 
 #header h1 a, #header h1 a:visited {
     text-decoration: none;
     padding: 0;
+    margin-left: -2px;
+    color:#666;
     }
 
 #header h2 {
-    font-size: 18px;
-    line-height: 1em;
-    margin-top: .2em;
+    font-size: 1.2em;
     }
 
 #header a, #header a:visited {
@@ -153,54 +170,84 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
   color: #fff;
   }
 
+#scholar-shield {
+  width: 62px;
+  }
+
+#header-left #scholar-shield {
+  float:right;
+  }
 
 /* SIDEBARS */
 
-#sidebar-left, #sidebar-right {
-    font-size: 1.1em;
-    }
-
-#sidebar-left, #sidebar-left ul.menu {
+#sidebar-left,
+#sidebar-left ul.menu {
     text-align: right;
     }
 
+#sidebar-left a,
+#sidebar-left h3,
+#sidebar-left #block-vsite_widgets-1 {
+    padding-right: 12px;
+    }
+
+#sidebar-right a,
+#sidebar-right h3,
+#sidebar-right #block-vsite_widgets-1 {
+  padding-left:12px;
+  }
+
 #sidebar-left a, #sidebar-left a:visited, #sidebar-right a, #sidebar-right a:visited {
-    color: #fff;
-    padding: 2px 4px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    color: #666;
     display:block;
     font-weight: bold;
     }
+
+#sidebar-left a:hover,
+#sidebar-right a:hover{
+  background: #bbb;
+  color: #000;
+  }
 
 #sidebar-left #term-head a, #sidebar-right #term-head a {
   display:inline !important;
   }
 
-#sidebar-left a:hover, #sidebar-right a:hover, #sidebar-left a.active, #sidebar-right a.active {
-    color: #fff;
-    background:#adad84;
+#sidebar-left a.active,
+#sidebar-left .active-trail a,
+#sidebar-right a.active,
+#sidebar-right .active-trail a{
+    color: #000;
+    background:#CECECE;
+    font-weight: bold;
     }
 
 #sidebar-left .views-admin-links ul li a, #sidebar-right .views-admin-links ul li a{
   display:inline;
   }
 
-/* FOOTER */
-
-body.sidebar-left #footer, body.two-sidebars #footer {
-  margin-left: 200px;
-  text-align: left;
-  }
 
 /* Nodes */
 
-#content-main .node, body.section-node-edit #content, body.section-node-add #content, #comments, .biblio-entry {
-    padding: 1.5em;
-    background: #fff;
-    margin-bottom: 10px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    }
+#content-main .node,
+body.section-node-edit #content,
+body.section-node-add #content,
+#comments,
+.biblio-entry {
+  padding: 1.5em;
+  padding-top:0;
+  }
+
+#content-main .node {
+  border-bottom: 1px solid #e5e5e4;
+  }
+
+#content h2.title,
+#content h3.cv-direct-download {
+  padding-left:1.5em;
+  }
 
 #comments {
   background: #EFEFEF;
@@ -219,4 +266,18 @@ h2#comments-title {
 .submitted {
   color: #a1b1b1;
   display:block;
+  }
+
+/*Footer*/
+
+#footer {
+  padding-top: 0;
+  }
+
+body.sidebar-right #footer, body.two-sidebars #footer {
+  padding-right: 200px;
+  }
+
+body.sidebar-left #footer, body.two-sidebars #footer {
+  padding-left: 200px;
   }
