--- a/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
+++ b/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
@@ -43,7 +43,7 @@ a:hover {
     }
 
 
-h1, h2, h3, #sidebar-right a, #navbar, #header, #sidebar-right, #sidebar-left {
+h1, h2, h3, #sidebar-second a, #navbar, #header, #sidebar-second, #sidebar-first {
     font-weight: normal;
     font-family: georgia, serif;
     }
@@ -73,13 +73,13 @@ h2.title {
 /* LAYOUT ELEMENTS */
 
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
     width: 180px;
     padding-left: 0;
     right: 210px;
     }
 
-#sidebar-right, #header-right {
+#sidebar-second, #header-right {
   padding-right: 0;
   }
 
@@ -88,19 +88,19 @@ h2.title {
     padding-right: 230px
     }
 
-body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
   padding-right: 20px;
   }
 
-#sidebar-right {
+#sidebar-second {
     border-left: 1px solid #dec6bd;
     }
 
-#sidebar-left {
+#sidebar-first {
     border-right: 1px solid #dec6bd;
     }
 
-body.two-sidebars #sidebar-left {
+body.two-sidebars #sidebar-first {
     border: none;
     }
 
@@ -174,11 +174,11 @@ body.navbar-off #header {
 
 /* MAIN CONTENT AREA */
 
-body.sidebar-left #content {
+body.sidebar-first #content {
     margin-left: 30px;
     }
 
-body.sidebar-right #content {
+body.sidebar-second #content {
     margin-right: 30px;
     }
 
