--- a/sites/all/themes/openscholar/scholar_weft/scholar-weft.css
+++ b/sites/all/themes/openscholar/scholar_weft/scholar-weft.css
@@ -65,11 +65,11 @@ h1 a, h1 a:visited {
   color: #FBF3E6;
   }
 
-h2, h3, #sidebar-right a, #navbar, #header {
+h2, h3, #sidebar-second a, #navbar, #header {
     font-weight: normal;
     }
 
-h3 a, #sidebar-right a {
+h3 a, #sidebar-second a {
     font-style: bold;
     }
 
@@ -92,7 +92,7 @@ h3.title {
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left {
+#sidebar-first {
    width: 168px;
    right: 208px;
     }
@@ -120,7 +120,7 @@ h3.title {
   padding-left: 100px;
   }
 
-#sidebar-right {
+#sidebar-second {
     border-left: 1px solid #ccc;
     margin-right: -241px;
     }
