--- a/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
+++ b/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
@@ -36,7 +36,7 @@ h2.title {
   font-size: .8em;
   }
 
-#sidebar-right h3.title, #sidebar-left h3.title {
+#sidebar-second h3.title, #sidebar-first h3.title {
   color: #d43808;
   font: 13px/normal "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
   font-weight: normal;
@@ -44,11 +44,11 @@ h2.title {
   letter-spacing: .5px;
   }
 
-#sidebar-right h3.title {
+#sidebar-second h3.title {
   color:#416803;
   }
 
-#sidebar-right li a, #sidebar-left li a {
+#sidebar-second li a, #sidebar-first li a {
   color: #757575;
   font-weight:normal;
   }
@@ -68,19 +68,19 @@ p.copy {
   }
 
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   font-size: .8em;
   line-height: 1.1em;
   }
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
   width: 152px;
   right: 232px;
   padding-left: 43px;
   padding-right: 17px;
   }
 
-#sidebar-right, #header-right {
+#sidebar-second, #header-right {
   width: 164px;
   padding-left: 38px;
   }
@@ -106,11 +106,11 @@ p.copy {
   padding: 0 33px;
   }
 
-body.sidebar-left #container, body.sidebar-left #header, body.sidebar-left #footer {
+body.sidebar-first #container, body.sidebar-first #header, body.sidebar-first #footer {
   background-position: -1012px 0;
   }
 
-body.sidebar-right #container, body.no-sidebars #header, body.no-sidebars #footer {
+body.sidebar-second #container, body.no-sidebars #header, body.no-sidebars #footer {
   background-position: -2024px 0;
   }
 
@@ -118,21 +118,21 @@ body.no-sidebars #container, body.no-sidebars #footer, body.navbar-off #header, 
   background-position: -3036px 0;
   }
 
-body.no-sidebars #header, body.no-sidebars #content-wrapper, body.sidebar-right #content-wrapper, body.no-sidebars #footer {
+body.no-sidebars #header, body.no-sidebars #content-wrapper, body.sidebar-second #content-wrapper, body.no-sidebars #footer {
   padding-left: 43px;
   }
 
-body.sidebar-left #content-wrapper {
+body.sidebar-first #content-wrapper {
   padding-left: 210px;
   }
 
 /* SIDEBAR ELEMENTS */
 
-body.navbar-off #sidebar-left {
+body.navbar-off #sidebar-first {
   padding-top: 0;
   }
 
-#sidebar-left #block-vsite_menus-0 {
+#sidebar-first #block-vsite_menus-0 {
   background: #edecdd;
   margin: 0 -15px 0 -27px;
   padding: 0 0 30px 0;
@@ -190,7 +190,7 @@ body.navbar-off #sidebar-left {
     padding-right: 1px;
     }
 
-#navbar li a, #sidebar-left #block-vsite_menus-0 li a {
+#navbar li a, #sidebar-first #block-vsite_menus-0 li a {
   line-height: 31px;
   text-transform:uppercase;
   color: #544f4f;
@@ -199,7 +199,7 @@ body.navbar-off #sidebar-left {
   padding: 6px 15px 5px 15px;
   }
 
-#sidebar-left #block-vsite_menus-0 li a {
+#sidebar-first #block-vsite_menus-0 li a {
   padding-left: 30px;
   }
 
@@ -221,7 +221,7 @@ body.navbar-off #sidebar-left {
 
 /*Footer */
 
-#footer, body.no-sidebars #footer, body.sidebar-right #footer, body.sidebar-left #footer {
+#footer, body.no-sidebars #footer, body.sidebar-second #footer, body.sidebar-first #footer {
   padding-left: 0;
   padding-right: 0;
   }
