--- a/sites/all/themes/openscholar/scholar_collector/scholar-collector-ie.css
+++ b/sites/all/themes/openscholar/scholar_collector/scholar-collector-ie.css
@@ -1,3 +1,3 @@
-body.two-sidebars #sidebar-left, body.two-sidebars #header-left {
+body.two-sidebars #sidebar-first, body.two-sidebars #header-left {
 	left: 195px;
 	}
