--- a/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
+++ b/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
@@ -25,25 +25,25 @@ a:hover {
     }
 
 
-h1, h2, h3, #sidebar-right a {
+h1, h2, h3, #sidebar-second a {
     font-weight: normal;
     color:#889095;
     }
 
-h1 a, h2 a, h3 a, #sidebar-right a {
+h1 a, h2 a, h3 a, #sidebar-second a {
     font-style: normal;
     }
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left, #header-left {
+#sidebar-first, #header-left {
     width: 180px;
     right: 210px;
     padding-left: 0;
     }
 
 
-#sidebar-right, #header-right {
+#sidebar-second, #header-right {
   padding-right: 0;
   }
 
@@ -52,11 +52,11 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     padding-right: 230px
     }
 
-body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
+body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
   padding-right: 20px;
   }
 
-#sidebar-right {
+#sidebar-second {
     border-left: 1px solid #ccc;
     }
 
@@ -111,11 +111,11 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
 
 /* MAIN CONTENT AREA */
 
-body.sidebar-left #content {
+body.sidebar-first #content {
     margin-left: 30px;
     }
 
-body.sidebar-right #content {
+body.sidebar-second #content {
     margin-right: 30px;
     }
 
